Fix spacing issues

--- a/src/features/global/components/Footer/styles.module.scss
+++ b/src/features/global/components/Footer/styles.module.scss
@@ -5,5 +5,6 @@
 
   h5 {
     color: #eaf0fb;
+    margin-bottom: calculateRem(20px);
   }
 }
